lesson-4-deploying-terraform-assets/exercises/starter/zone1/modules/ec2/ec2.tf
resource "aws_instance" "ubuntu" {
  ami           = var.aws_ami 
  count         = var.instance_count
  instance_type = "t3.micro"
  subnet_id = var.public_subnet_ids[0]
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]

  tags = {
    Name = "Ubuntu-Web"
  }
}

resource "aws_security_group" "ec2_sg" {
  name        = "ec2_sg"
  description = "Allow ssh and http to the cluster"
  vpc_id      = var.vpc_id
  
  ingress {
    description      = "Allow ssh ingress to port 22" 
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "Allow http ingres to port 80"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    description      = "Egress all on all ports and protocols"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    name = "ec2_sg"
  }
}
